exports[`test A standard order 1`] = `
<li
  className="fVKSfD">
  <span
    className="KzPla">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="hSIOhO">
    MOOIE 456 TEST
  </span>
  <span
    className="column--order-items jKEpQi">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        Name of the product
      </span>
      <span
        className="gLZwgs">
        Another product
      </span>
    </span>
  </span>
  <span
    className="kYCpab">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="lmKmYC">
    completed
  </span>
  <span
    className="column--order-invoice-button kvvXDP">
    <a
      aria-label="Download invoice"
      className="gQnPQn"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink" />
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="fVKSfD">
  <span
    className="KzPla">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="hSIOhO">
    MOOIE 456 TEST
  </span>
  <span
    className="column--order-items jKEpQi">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        Name of the product
      </span>
      <span
        className="gLZwgs">
        Another product
      </span>
    </span>
  </span>
  <span
    className="kYCpab">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="lmKmYC">
    pending
  </span>
  <span
    className="column--order-invoice-button kvvXDP">
    <button
      aria-label="Download invoice"
      className="gqeVuG hctKRi"
      disabled="disabled"
      to="http://somelink" />
  </span>
</li>
`;
